force-app/main/default/objects/MS_FSM_Attribute_Measurement__c/MS_FSM_Attribute_Measurement__c.object-meta.xml
<CustomObject>
    <description>Attribute measurements collected as a singular data point - data attribute definition is the parent class that drives the data collected</description>
    <label>Attribute Measurement</label>
    <nameField>
        <label>Attribute Measurement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Measurements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>