force-app/main/default/objects/MS_FSM_Attribute_Measurement__c/fields/MS_FSM_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Asset_Id__c</fullName>
    <description>Asset Id associated to data collected saved in text</description>
    <label>Asset Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>