force-app/main/default/objects/MS_FSM_Attribute_Measurement__c/fields/MS_FSM_Boolean_Value__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Boolean_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for capturing boolean values needed to be captured in the field</description>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>