force-app/main/default/objects/MS_FSM_Attribute_Measurement__c/fields/MS_FSM_Data_Attribute_Definition__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Data_Attribute_Definition__c</fullName>
    <description>Data Attribute Definition associated to the attribute measurement driving the data point collected</description>
    <label>Data Attribute Definition</label>
    <referenceTo>MS_FSM_Data_Attribute_Definition__c</referenceTo>
    <relationshipLabel>Attribute Measurements</relationshipLabel>
    <relationshipName>Attribute_Measurements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>