force-app/main/default/objects/MS_FSM_Attribute_Measurement__c/fields/MS_FSM_Date_Value__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Date_Value__c</fullName>
    <description>Field for capturing date needed</description>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>