force-app/main/default/objects/MS_FSM_Attribute_Measurement__c/fields/MS_FSM_Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Flow_Name__c</fullName>
    <description>Name of flow used for data collection items</description>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>