force-app/main/default/objects/MS_FSM_Attribute_Measurement__c/fields/MS_FSM_Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Is_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean used to determine if data point collected is valid</description>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>