force-app/main/default/objects/MS_FSM_Attribute_Measurement__c/fields/MS_FSM_Number_Measurement__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Number_Measurement__c</fullName>
    <description>Number field for capturing numeric measurements needed (decimal places 3)</description>
    <label>Number Measurement</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>