force-app/main/default/objects/MS_FSM_Attribute_Measurement__c/fields/MS_FSM_Text_Measurement__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Text_Measurement__c</fullName>
    <description>Field for capturing text measurements needed (length 255)</description>
    <label>Text Measurement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>