force-app/main/default/objects/MS_FSM_Attribute_Measurement__c/fields/MS_FSM_Timestamp_Value__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Timestamp_Value__c</fullName>
    <description>Date/time (timestamp) value to capture timestamps needed</description>
    <label>Timestamp Value</label>
    <type>DateTime</type>
</CustomField>